--- a/src/index.css
+++ b/src/index.css
@@ -2,26 +2,29 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  width: 100%;
 }
 
 body {
-  background-color: floralwhite;
-  color: white;
-  font-family: "Roboto", sans-serif;
+  background-color: black;
   display: flex;
-  /* align-items: center; */
   justify-content: center;
   min-height: 100vh;
-  padding: 2rem;
+  padding-top: 4rem;
 }
-
-h1 {
-  margin: 2rem;
+.App {
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-around;
+  width: 80%;
+}
+.App div:nth-child(2){
+   width: 56%;
 }
 
 .board {
-  border: 6px solid #ff652f;
-  background: #ff652f;
+  border: 6px solid #0c6dbd;
+  background: #0c6dbd;
   width: 600px;
   height: 500px;
   display: grid;
@@ -34,13 +37,12 @@ h1 {
   border: none;
   font-size: 2rem;
   color: rgba(0, 0, 0, 0);
-  /* font-weight: 800; */
   cursor: pointer;
   outline: none;
 }
 
 .black {
-  background-image:url('https://media.wired.com/photos/5cdefb92b86e041493d389df/1:1/w_988,h_988,c_limit/Culture-Grumpy-Cat-487386121.jpg');
+  background-image:url('https://pbs.twimg.com/profile_images/378800000118489223/e48987243d156522db695b29c58ac37c.jpeg');
   background-position: center;
   background-size: cover; 
 }
@@ -50,25 +52,14 @@ h1 {
   background-size: cover; 
 }
 
-.info-wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-
-h3 {
-  padding: 1rem;
-}
-
-li {
-  list-style: none;
-}
-
-.info-wrapper button {
-  background: #272727;
+.poetryBox {
+  border: 1px solid blue;
+  overflow-y: auto;
   color: white;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 0.5rem;
-  margin: 0.5rem 1rem;
+  height: 450px;
+  padding: 15px;
+}
+
+.poetryBox div {
+  margin-bottom: 14px; 
 }
