--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ body {
 .moveTurn {
   position: relative;
   top: 10px;
-  right: -280px;
+  right: -240px;
   color: black;
   margin-left: 200px;
 }
@@ -90,11 +90,12 @@ body {
 
 .undoButton {
   margin-top: 5px;
+  margin-left: 25px;
   height: 45px;
   font-size: 20px;
   font-family: 'Brush Script MT', cursive;
   background-color: rgb(77, 77, 177);
-  border: none;
+  border-radius: 12px;
   color: white;
 }
 
